list(APPEND TORCH_TESTS "testTorchInference.cpp")

foreach(TEST ${TORCH_TESTS})
    message(STATUS "Creating Torch test ${TEST}")
    get_filename_component(UNITTEST_NAME ${TEST} NAME)
    get_filename_component(UNITTEST_DIR ${TEST} DIRECTORY)
    add_executable(${UNITTEST_NAME}.x ${TEST})
    target_sources(${UNITTEST_NAME}.x PRIVATE testTorchInference.cpp ${CMAKE_SOURCE_DIR}/src/inferenceStrategy/torchInference.cpp)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${TORCH_INCLUDE_DIRS})
    target_link_libraries(${UNITTEST_NAME}.x PRIVATE ${TORCH_LIBRARIES})
endforeach(TEST)


list(APPEND TENSORFLOW_TESTS "testTensorflowInference.cpp")

foreach(TEST ${TENSORFLOW_TESTS})
    message(STATUS "Creating Tensorflow test ${TEST}")
    message(STATUS "Tensorflow include path ${TENSORFLOW_INCLUDE_DIRS}")
    get_filename_component(UNITTEST_NAME ${TEST} NAME)
    get_filename_component(UNITTEST_DIR ${TEST} DIRECTORY)
    add_executable(${UNITTEST_NAME}.x ${TEST})
    target_sources(${UNITTEST_NAME}.x PRIVATE testTensorflowInference.cpp ${CMAKE_SOURCE_DIR}/src/inferenceStrategy/tensorflowInference.cpp)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${TENSORFLOW_INCLUDE_DIRS})
    target_link_libraries(${UNITTEST_NAME}.x PRIVATE ${TENSORFLOW_LIBRARIES})
endforeach(TEST)


list(APPEND TENSORFLOW_REPRODUCER "tensorflowReproducer.cpp")

foreach(TEST ${TENSORFLOW_REPRODUCER})
    message(STATUS "Creating Tensorflow test ${TEST}")
    message(STATUS "Tensorflow include path ${TENSORFLOW_INCLUDE_DIRS}")
    get_filename_component(UNITTEST_NAME ${TEST} NAME)
    get_filename_component(UNITTEST_DIR ${TEST} DIRECTORY)
    add_executable(${UNITTEST_NAME}.x ${TEST})
    target_sources(${UNITTEST_NAME}.x PRIVATE tensorflowReproducer.cpp)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${TENSORFLOW_INCLUDE_DIRS})
    target_link_libraries(${UNITTEST_NAME}.x PRIVATE ${TENSORFLOW_LIBRARIES})
endforeach(TEST)


list(APPEND DISTRIBUTION_TESTS "testRoundRobinDistribution.cpp")
foreach(TEST ${DISTRIBUTION_TESTS})
    message(STATUS "Creating Distribution test ${TEST}")
    get_filename_component(UNITTEST_NAME ${TEST} NAME)
    get_filename_component(UNITTEST_DIR ${TEST} DIRECTORY)
    add_executable(${UNITTEST_NAME}.x ${TEST})
    target_sources(${UNITTEST_NAME}.x PRIVATE testRoundRobinDistribution.cpp ${CMAKE_SOURCE_DIR}/src/distributionStrategy/roundRobinDistribution.cpp)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${MPI_INCLUDE_PATH})
    target_link_libraries(${UNITTEST_NAME}.x PRIVATE ${MPI_LIBRARIES})
endforeach(TEST)

list(APPEND AIXELERATOR_TESTS "testAIxeleratorService.cpp" "testAIxeleratorServiceTF.cpp")
foreach(TEST ${AIXELERATOR_TESTS})
    message(STATUS "Creating AIxelerator test ${TEST}")
    get_filename_component(UNITTEST_NAME ${TEST} NAME)
    get_filename_component(UNITTEST_DIR ${TEST} DIRECTORY)
    add_executable(${UNITTEST_NAME}.x ${TEST})
    target_sources(${UNITTEST_NAME}.x PRIVATE ${TEST} ${CMAKE_SOURCE_DIR}/src/aixeleratorService.cpp ${CMAKE_SOURCE_DIR}/src/distributionStrategy/roundRobinDistribution.cpp ${CMAKE_SOURCE_DIR}/src/inferenceStrategy/torchInference.cpp ${CMAKE_SOURCE_DIR}/src/inferenceStrategy/tensorflowInference.cpp)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${MPI_INCLUDE_PATH})
    target_link_libraries(${UNITTEST_NAME}.x PRIVATE ${MPI_LIBRARIES})
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${TORCH_INCLUDE_DIRS})
    target_link_libraries(${UNITTEST_NAME}.x PRIVATE ${TORCH_LIBRARIES})
    target_include_directories(${UNITTEST_NAME}.x PRIVATE ${TENSORFLOW_INCLUDE_DIRS})
    target_link_libraries(${UNITTEST_NAME}.x PRIVATE ${TENSORFLOW_LIBRARIES})
endforeach(TEST)



message(STATUS "Creating AIxelerator LIB test")
add_executable(testAIxeleratorLib.x testAIxeleratorService.cpp)
target_sources(testAIxeleratorLib.x PRIVATE testAIxeleratorService.cpp)
target_include_directories(testAIxeleratorLib.x PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_include_directories(${UNITTEST_NAME}.x PRIVATE ${MPI_INCLUDE_PATH})
target_link_libraries(testAIxeleratorLib.x PRIVATE ${MPI_LIBRARIES})
target_include_directories(${UNITTEST_NAME}.x PRIVATE ${TORCH_INCLUDE_DIRS})
target_link_libraries(testAIxeleratorLib.x PRIVATE ${TORCH_LIBRARIES})
target_include_directories(${UNITTEST_NAME}.x PRIVATE ${TENSORFLOW_INCLUDE_DIRS})
target_link_libraries(testAIxeleratorLib.x PRIVATE ${TENSORFLOW_LIBRARIES})
target_link_libraries(testAIxeleratorLib.x PRIVATE AIxeleratorServiceLib)


message(STATUS "Creating TorchInference C Interface Test")
add_executable(testTorchInference_interfaceC.x testTorchInferenceFromC.c)
target_sources(testTorchInference_interfaceC.x PRIVATE testTorchInferenceFromC.c ${CMAKE_SOURCE_DIR}/src/inferenceStrategy/torchInference.cpp ${CMAKE_SOURCE_DIR}/src/inferenceStrategy/torchInference_interfaceC.cpp)
target_include_directories(testTorchInference_interfaceC.x PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_include_directories(testTorchInference_interfaceC.x PRIVATE ${TORCH_INCLUDE_DIRS})
target_link_libraries(testTorchInference_interfaceC.x PRIVATE ${TORCH_LIBRARIES})

message(STATUS "Creating TorchInference Fortran Interface Test")
add_executable(testTorchInference_interfaceF.x testTorchInferenceFromF.f90)
target_sources(testTorchInference_interfaceF.x PRIVATE testTorchInferenceFromF.f90 ${CMAKE_SOURCE_DIR}/src/inferenceStrategy/torchInference.cpp ${CMAKE_SOURCE_DIR}/src/inferenceStrategy/torchInference_interfaceC.cpp ${CMAKE_SOURCE_DIR}/src/inferenceStrategy/torchInference_interfaceF.f90)
target_include_directories(testTorchInference_interfaceF.x PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_include_directories(testTorchInference_interfaceF.x PRIVATE ${TORCH_INCLUDE_DIRS})
target_link_libraries(testTorchInference_interfaceF.x PRIVATE ${TORCH_LIBRARIES})
set_target_properties(testTorchInference_interfaceF.x PROPERTIES LINKER_LANGUAGE Fortran)
