CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
PROJECT(libFlexMLP_3x2x100x100x2_veda_wrapper LANGUAGES CXX)
SET(CMAKE_MODULE_PATH /usr/local/ve/veda/cmake)
FIND_PACKAGE(VE)
ENABLE_LANGUAGE(VEDA_CXX)
SET(CMAKE_BUILD_TYPE Release)
INCLUDE_DIRECTORIES(${VEDA_INCLUDES})
ADD_LIBRARY(libFlexMLP_3x2x100x100x2_veda_wrapper SHARED ${CMAKE_CURRENT_LIST_DIR}/my_wrapper.vcpp)
TARGET_COMPILE_OPTIONS(libFlexMLP_3x2x100x100x2_veda_wrapper PUBLIC "-O4" "-finline-functions")
SET(FLEXMLP_LIB libFlexMLP_3x2x100x100x2)
TARGET_LINK_LIBRARIES(libFlexMLP_3x2x100x100x2_veda_wrapper ${CMAKE_CURRENT_LIST_DIR}/../BUILD/lib${FLEXMLP_LIB}.so ${VEDA_DEVICE_LIBRARY})
ADD_LIBRARY(veda-mwe-device SHARED my_wrapper.vcpp)
